# ostk-recall

./: .gitignore  Agentfile  Agentfile.self.sig  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  NOTICE  README.md  config.example.toml  ostk.toml
.cargo/: config.toml
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/attention/: Cargo.toml
crates/attention-mcp/: Cargo.toml
crates/attention-mcp/src/: cli.rs  handlers.rs  lib.rs  tools.rs
crates/attention/examples/: contextual_embed_probe.rs  hdbscan_corpus_probe.rs  hdbscan_probe.rs
crates/attention/src/: activity.rs  cluster.rs  concept_growth.rs  curator.rs  emergent.rs  health.rs  lib.rs  novelty.rs  observer.rs  query.rs  salience.rs  weaver.rs
crates/attention/tests/: ab_harness.rs  ambient_concept_growth_e2e.rs  integration.rs  observer_owns_chain_emit.rs  rolling_ema.rs  scope_vector_callers_audit.rs  scope_vector_priority.rs
crates/cli/: Cargo.toml
crates/cli/examples/: compact_corpus.rs  corpus_recover.rs  latent_floor_bench.rs  rank_bench.rs  stale_local_commands.rs  stale_tool_blocks.rs
crates/cli/src/: commands.rs  lens_loop.rs  lens_state.rs  lib.rs  main.rs  seed.rs
crates/cli/tests/: ambient_e2e.rs  bench_fixtures.rs  claude_code_e2e.rs  code_e2e.rs  doc_graph_e2e.rs  file_glob_e2e.rs  ignore_e2e.rs  latent_promotion_e2e.rs  lens_portfolio_e2e.rs  markdown_e2e.rs  mcp_e2e.rs  ostk_project_e2e.rs  relational_lens_e2e.rs  verification_panel.rs  zip_export_e2e.rs
crates/core/: Cargo.toml
crates/core/src/: apparatus.rs  attention.rs  chunk.rs  config.rs  error.rs  facets.rs  lib.rs  record_rules.rs  scanner.rs  source.rs  types.rs
crates/core/tests/: chunk_id_determinism.rs  facets_override.rs  header_composition_deterministic.rs  source_config_id_collision.rs  source_config_id_legacy.rs
crates/embed/: Cargo.toml
crates/embed/examples/: embedder_compare.rs  fastembed_colbert_probe.rs
crates/embed/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: crystallize.rs  lib.rs  memory.rs  protocol.rs  resources.rs  server.rs  tests.rs  tools.rs
crates/mcp/tests/: resources_p9a_min.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/pipeline/tests/: embedding_input_sha256_dedupe.rs  overlap_ownership.rs  record_rules_overlay.rs  scan_paths_identity.rs
crates/query/: Cargo.toml
crates/query/src/: audit.rs  candidate.rs  concept.rs  context.rs  error.rs  freshness.rs  hybrid.rs  lanes.rs  lens.rs  lib.rs  link.rs  rank.rs  relational.rs  rerank.rs  row.rs  stats.rs  synthesis.rs  tests.rs  types.rs
crates/query/tests/: attention_affinity_score.rs  before_filter.rs  candidate_union.rs  freshness_act_r.rs  lens_portfolio_diversity.rs  lens_pseudo_query.rs  lens_refractory.rs  rank_engine_concurrent.rs  rank_feature_async_prepare.rs  rank_feature_two_phase.rs  recall_pipeline.rs
crates/scan/: Cargo.toml
crates/scan/examples/: scan_real_gemini.rs
crates/scan/src/: anthropic_session.rs  claude_code.rs  code.rs  codex.rs  fcp_rust.rs  file_glob.rs  gemini.rs  lib.rs  markdown.rs  ostk_project.rs  threads.rs  tree_sitter.rs  walk.rs  zip_export.rs
crates/scan/tests/: threads_haystack.rs
crates/serve/: Cargo.toml
crates/serve/src/: handlers.rs  lib.rs  main.rs  protocol.rs  state.rs
crates/store/: Cargo.toml
crates/store/examples/: add_column_probe.rs  array_contains_probe.rs  multivector_probe.rs
crates/store/src/: activation.rs  concepts.rs  corpus.rs  duckdb_open.rs  events.rs  ingest.rs  lib.rs  manifest.rs  schema.rs  threads.rs
crates/store/tests/: access_history_query.rs  chain_event_access_types.rs  concept_edge_provenance.rs  manifest_rebuild.rs
docs/: architecture.md  fastembed-colbert-probe.md  hdbscan-probe.md  lance-probe-results.md  rank-bench-results.md
docs/design/autonomous-salience/: THESIS.md  design.md  plan.md  recalibration.md  research-negative-transfer.md  research-self-audit.md  research-specificity.md  research-value.md  review.md
docs/spec/: driver-protocol.md
examples/: .gitignore  README.md
examples/01-engineering/: README.md  config.toml  run.sh
examples/01-engineering/content/code/: cache.py  retry.rs
examples/01-engineering/content/decisions/: 0001-use-lancedb.md  0002-derived-conductance.md
examples/02-personal-kb/: README.md  config.toml  run.sh  smoke.md
examples/02-personal-kb/content/meetings/: 2026-05-20-standup.md
examples/02-personal-kb/content/people/: mike.md  sarah.md  tori.md
examples/02-personal-kb/content/places/: office.md
examples/03-persistent-agent/: README.md  config.toml  run.sh
examples/03-persistent-agent/content/memory/: agent.md  decision-derived-conductance.md  project-ostk.md
examples/04-shared-substrate/: README.md  config.toml  run.sh
examples/04-shared-substrate/content/: diffusion.md  ostk-recall.md
scripts/: recall-backup.sh
tests/: queries.yaml
tests/fixtures/: README.md
tests/fixtures/bench/: lens_turns.jsonl  queries.corpus.json  queries.json  regenerate.sh
tests/fixtures/claude_code/-Users-x-projects-demo/: session-memory-model.jsonl
tests/fixtures/code/: arithmetic.rs
tests/fixtures/file_glob/: alpha.txt
tests/fixtures/file_glob/sub/: beta.txt
tests/fixtures/markdown/notes/: intro.md
tests/fixtures/markdown/notes/topics/: one.md  rebase.md  two.md
tests/fixtures/ostk_project/.ostk/: audit.jsonl  decisions.jsonl
tests/fixtures/ostk_project/.ostk/conversations/: panel.jsonl
tests/fixtures/ostk_project/.ostk/memory/: pages.jsonl  panel_memory_page.page
tests/fixtures/ostk_project/.ostk/needles/: issues.jsonl
tests/fixtures/ostk_project/.ostk/sessions/: session-panel.jsonl
tests/fixtures/ostk_project/docs/spec/: overview.md
tests/fixtures/ostk_project/src/: lib.rs
tests/fixtures/zip_export/: conversations.json
