[package]
name = "ostk-recall-attention"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
ostk-recall-core = { workspace = true }
ostk-recall-pipeline = { workspace = true }
ostk-recall-store = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
# regex: the turn observer's recognition-language detector matches
# a small set of canonical triggers and noun-phrase patterns over each
# turn's text. A hand-rolled scanner would re-encode the regex grammar
# without measurable gain; workspace already depends on `regex 1.11`.
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = { workspace = true }
