[package]
name = "ostk-recall-attention"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
ostk-recall-core = { workspace = true }
ostk-recall-pipeline = { workspace = true }
ostk-recall-store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
# regex: the turn observer's recognition-language detector matches
# a small set of canonical triggers and noun-phrase patterns over each
# turn's text. A hand-rolled scanner would re-encode the regex grammar
# without measurable gain; workspace already depends on `regex 1.11`.
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
# QA integration tests in crates/attention/tests/ drive the MCP
# dispatch surface end-to-end (e.g. verify ScoreAttribution leaves the
# JSON boundary intact) and need a deterministic embedder; both pull in
# attention-mcp + a fake ChunkEmbedder.
ostk-recall-attention-mcp = { workspace = true }
# P2 Probe 5: HDBSCAN clustering crate evaluated for P8's concept
# refresh. Dev-dep only — the production decision lives in P8.
hdbscan = "0.12"
# Contextual-embedder probe (P8 viability): re-embed sampled chunk text with a
# small ONNX sentence-transformer to test whether contextual embeddings form
# topical density basins where static potion did not. Dev-dep only.
fastembed = { workspace = true }
