[package]
name = "ostk-recall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "ostk_recall_cli"
path = "src/lib.rs"

[[bin]]
name = "ostk-recall"
path = "src/main.rs"

[dependencies]
ostk-recall-core = { workspace = true }
ostk-recall-embed = { workspace = true }
ostk-recall-store = { workspace = true }
ostk-recall-pipeline = { workspace = true }
ostk-recall-scan = { workspace = true }
ostk-recall-query = { workspace = true }
ostk-recall-mcp = { workspace = true }
ostk-recall-attention = { workspace = true }
tokio-util = { workspace = true }
ostk-recall-attention-mcp = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
notify-debouncer-full = { workspace = true }
fs4 = { workspace = true }
ignore = { workspace = true }


[dev-dependencies]
ostk-recall-store = { workspace = true }
ostk-recall-core = { workspace = true }
ostk-recall-pipeline = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
zip = { workspace = true }
