[package]
name = "ostk-recall-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# NOTE: embed intentionally does not inherit `[workspace.lints]` because it
# needs a single `unsafe` block (`std::env::set_var` in `pin_hf_home`) that
# conflicts with the workspace's `unsafe_code = "forbid"`. Clippy pedantic
# stays enabled below.

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[dependencies]
ostk-recall-core = { workspace = true }
model2vec-rs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
